--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,13 @@ captures/
 # Intellij
 *.iml
 .idea/workspace.xml
+.idea/libraries
 
 # Keystore files
 *.jks
+
+#Others
+/local.properties
+.DS_Store
+.externalNativeBuild
+
